Fix overflow-x visibility

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -19,6 +19,7 @@
 
     .page-content-wrapper {
         overflow-y: scroll;
+        overflow-x: hidden;
         width: 100%;
         height: 100%;
         margin-left: 64px;
